--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -85,7 +85,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 
 # Uptime
@@ -694,6 +694,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
+#image_backend="ascii"
 image_backend="ascii"
 
 # Image Source
@@ -761,6 +762,7 @@ image_source="auto"
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
 ascii_distro="auto"
+#ascii_distro="LFS"
 
 # Ascii Colors
 #
