tmux copy-buffer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,25 @@
 
 # Scroll shell history
 setw -g mouse on
+setw -g mode-keys vi
+
+#bind P paste-buffer
+
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-selection
+#bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
 
 # Set the base index for panes to 1 instead of 0
 setw -g pane-base-index 1
+
+#bind-key -n 'C-b-y' copy-mode
 
 # moving between panes
 bind h select-pane -L
