--- a/.aliasrc
+++ b/.aliasrc
@@ -52,7 +52,7 @@ alias t="tmux source-file ~/.tmux.conf"
 # cd alias
 alias cg="cd $GITHUBDIR"
 alias sd="cd $XDG_CONFIG_HOME/scripts"
-alias cc="cd $XDG_CONFIG_HOME"
+alias ca="cd $XDG_CONFIG_HOME"
 alias da="cd $DROPBOXDIR"
 alias sa="cd $SCHOOLDIR"
 
